; ModuleID = '/home/carl/AnghaBench/linux/net/nfc/hci/extr_llc.c_nfc_llc_unregister.c'
source_filename = "/home/carl/AnghaBench/linux/net/nfc/hci/extr_llc.c_nfc_llc_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfc_llc_engine = type { %struct.nfc_llc_engine*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfc_llc_unregister(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.nfc_llc_engine*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.nfc_llc_engine* @nfc_llc_name_to_engine(i8* %4)
  store %struct.nfc_llc_engine* %5, %struct.nfc_llc_engine** %3, align 8
  %6 = load %struct.nfc_llc_engine*, %struct.nfc_llc_engine** %3, align 8
  %7 = icmp eq %struct.nfc_llc_engine* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %19

9:                                                ; preds = %1
  %10 = load %struct.nfc_llc_engine*, %struct.nfc_llc_engine** %3, align 8
  %11 = getelementptr inbounds %struct.nfc_llc_engine, %struct.nfc_llc_engine* %10, i32 0, i32 1
  %12 = call i32 @list_del(i32* %11)
  %13 = load %struct.nfc_llc_engine*, %struct.nfc_llc_engine** %3, align 8
  %14 = getelementptr inbounds %struct.nfc_llc_engine, %struct.nfc_llc_engine* %13, i32 0, i32 0
  %15 = load %struct.nfc_llc_engine*, %struct.nfc_llc_engine** %14, align 8
  %16 = call i32 @kfree(%struct.nfc_llc_engine* %15)
  %17 = load %struct.nfc_llc_engine*, %struct.nfc_llc_engine** %3, align 8
  %18 = call i32 @kfree(%struct.nfc_llc_engine* %17)
  br label %19

19:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.nfc_llc_engine* @nfc_llc_name_to_engine(i8*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @kfree(%struct.nfc_llc_engine*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
